# proton-pass-common

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  Makefile  README.md  patch.mjs  release.toml  ruff.toml
proton-authenticator/: Cargo.toml  build.rs  uniffi.toml
proton-authenticator-mobile/: Cargo.toml  build.rs  uniffi.toml
proton-authenticator-mobile/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
proton-authenticator-mobile/android/gradle/: libs.versions.toml
proton-authenticator-mobile/android/lib/: build.gradle.kts
proton-authenticator-mobile/android/libTest/: .gitignore  build.gradle.kts
proton-authenticator-mobile/android/libTestApp/: build.gradle.kts
proton-authenticator-mobile/android/libUnitTest/: build.gradle.kts
proton-authenticator-mobile/iOS/AuthenticatorRustCore/: Package.swift  README.md
proton-authenticator-mobile/src/: authenticator.rs  authenticator.udl  benchmark.rs  benchmark.udl  crypto.rs  crypto.udl  entry.rs  generator.rs  generator.udl  import.rs  import.udl  issuer_mapper.rs  issuer_mapper.udl  lib.rs  log.rs  log.udl  namespace.udl  operations.rs  operations.udl  ordering.rs  ordering.udl  qr.rs  qr.udl
proton-authenticator-web/: Cargo.toml  asm.js  package.json
proton-authenticator-web/src/: entry.rs  lib.rs  log.rs
proton-authenticator-web/src/worker/: client.rs  crypto.rs  generator.rs  import.rs  issuer.rs  mod.rs  operations.rs  ordering.rs
proton-authenticator-web/test/: README.md  bun.lockb  index.html  package.json  proton-authenticator-web-worker-generator.spec.ts  proton-authenticator-web-worker-importer.spec.ts  proton-authenticator-web-worker-operations.spec.ts  proton-authenticator-web-worker.spec.ts  script.js  styles.css  tsconfig.json
proton-authenticator-web/test-website/: index.html  script.js
proton-authenticator-web/test/pkg/: package.json
proton-authenticator/proto/: authenticator_entry.proto
proton-authenticator/resources/: issuerInfos.txt  issuerManualOverrides.txt
proton-authenticator/src/: client.rs  crypto.rs  generator.rs  issuer_mapper.rs  lib.rs  log.rs  operations.rs  ordering.rs  qr.rs  test_utils.rs  utils.rs
proton-authenticator/src/entry/: create.rs  crypto.rs  exporter.rs  mod.rs  model.rs  password_exporter.rs  serializer.rs  update.rs
proton-authenticator/src/parser/: mod.rs
proton-authenticator/src/steam/: mod.rs
proton-pass-common/: 2faDomains.txt  Cargo.toml  build.rs  passwords.txt  wordlist_denylist.txt
proton-pass-common/benches/: card_detector.rs  markdown_renderer.rs  markdown_renderer_allocations.rs  password_scorer.rs
proton-pass-common/proto/: authenticator_entry.proto  google_authenticator.proto
proton-pass-common/src/: alias_prefix.rs  domain.rs  email.rs  host.rs  invite.rs  lib.rs  login.rs  otp.rs  qr.rs  share.rs  sshkey.rs  string_modifiers.rs  twofa.rs  utils.rs  wifi.rs
proton-pass-common/src/authenticator/: client.rs  entry.rs  mod.rs  test_utils.rs
proton-pass-common/src/creditcard/: detector.rs  mod.rs
proton-pass-common/src/file/: associations.rs  mod.rs  sanitize_filename.rs
proton-pass-common/src/markdown/: CURSOR_FIX.md  README.md  cursor.rs  document.rs  editor.rs  list_operations.rs  mod.rs  newline.rs  operations.rs  parser.rs  renderer.rs  tests.rs  undo.rs  utf16.rs
proton-pass-common/src/passkey/: fetcher.rs  generate.rs  mod.rs  passkey_handling.rs  protonpasskey.rs  protonpasskeydeserializer.rs  protonpasskeyserializer.rs  resolve.rs  utils.rs
proton-pass-common/src/password/: analyzer.rs  error.rs  mod.rs  passphrase_generator.rs  password_generator.rs  random_generator.rs  scorer.rs
proton-pass-common/src/totp/: algorithm.rs  components.rs  error.rs  get_value.rs  mod.rs  queries.rs  sanitizer.rs  totp.rs
proton-pass-common/src/username/: mod.rs  username_generator.rs
proton-pass-common/test_data/: pgpkey.private  sample.docx  sample.pages  sample.rar
proton-pass-common/test_data/file_format/: pgpkey.pub  sample.garbage  sample.ics  sample.xlsx
proton-pass-common/test_data/markdown/: benchmark_baseline.md  shared_renderer.md
proton-pass-common/test_support/: markdown_perf_shapes.rs
proton-pass-common/tests/: alias_prefix_valid.rs  credit_card_detector.rs  domain.rs  email_valid.rs  file.rs  markdown_editor.rs  otp_parser.rs  passkey.rs  password_scorer.rs  sanitize_totp_uri.rs  sshkey.rs  totp.rs  totp_parse.rs  totp_uri_for_saving.rs  twofa_valid.rs
proton-pass-common/username_wordlists/: adjectives.txt  adverbs.txt  forbidden_words.txt  nouns.txt  verbs.txt
proton-pass-mobile/: Cargo.toml  build.rs  uniffi.toml
proton-pass-mobile/android/: .gitignore  Makefile  build.gradle.kts  gradle.properties  settings.gradle.kts
proton-pass-mobile/src/: alias.rs  alias.udl  base.udl  common.udl  creditcard.rs  creditcard.udl  domain.rs  domain.udl  email.rs  email.udl  file.rs  file.udl  host.rs  host.udl  invite.rs  invite.udl  lib.rs  login.rs  login.udl  markdown.rs  markdown.udl  passkey.rs  passkey.udl  passkey_fetcher.rs  password.rs  password.udl  qr.rs  qr.udl  share.rs  share.udl  sshkey.rs  sshkey.udl  totp.rs  totp.udl  twofa.rs  twofa.udl  username.rs  wifi.rs  wifi.udl
proton-pass-totp/: Cargo.toml  uniffi.toml
proton-pass-totp/benches/: totp_generation.rs
proton-pass-totp/src/: algorithm.rs  error.rs  lib.rs  queries.rs  sanitizer.rs  totp.rs
proton-pass-totp/tests/: edent.rs  totp.rs
proton-pass-web/: Cargo.toml  asm.js  package.json
proton-pass-web/src/: common.rs  creditcard.rs  lib.rs  login.rs  passkey.rs  password.rs  ui.rs  utils.rs  worker.rs
proton-pass-web/test/: README.md  bun.lockb  index.ts  package.json  proton-pass-web-markdown.spec.ts  proton-pass-web-password.spec.ts  proton-pass-web-ui.spec.ts  proton-pass-web-username.spec.ts  proton-pass-web-worker-share.spec.ts  proton-pass-web-worker-sshkey.spec.ts  proton-pass-web-worker.spec.ts  proton-pass-web.spec.ts  test-markdown-website-renderer.spec.ts  tsconfig.json
tools/generateIssuerInfos/: Cargo.toml  config.toml
tools/icon_fetcher/: Cargo.toml  config.toml
(+163 files in other folders)
