[package]
name = "proton-authenticator-mobile"
version = "0.13.5"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    # Yes, we are relying on the number of whitespaces
    {file="android/lib/build.gradle.kts", search="    version = .*", replace="    version = \"{{version}}\""}
]


[lib]
doctest = false
crate-type = ["cdylib", "staticlib"]
name = "proton_authenticator_common_mobile"

[dependencies]
proton-authenticator = { path = "../proton-authenticator" }
proton-pass-derive = { path = "../proton-pass-derive" }

async-trait = "0.1.87"
clap_derive = { version = "4.0.0-rc.1" } # Needed for now to fix mobile binding generation
tokio = { version = "1.43", features = ["full"] }
uniffi = { version = "0.29.0" }

[build-dependencies]
uniffi = { version = "0.29.0", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "./bindgen.rs"
required-features = [ "uniffi/cli" ]
