[package]
name = "proton-authenticator-mobile"
version = "0.25.3"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    # Yes, we are relying on the number of whitespaces
    {file="android/lib/build.gradle.kts", search="    version = .*", replace="    version = \"{{version}}\""}
]


[lib]
doctest = false
crate-type = ["cdylib", "staticlib"]
name = "proton_authenticator_common_mobile"

[dependencies]
proton-authenticator = { path = "../proton-authenticator" }
proton-pass-derive = { path = "../proton-pass-derive" }

tokio.workspace = true

chrono = "0.4.40"
uniffi = { version = "0.29.2" }

[build-dependencies]
uniffi = { version = "0.29.2", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "./bindgen.rs"
required-features = [ "uniffi/cli" ]
