[package]
name = "proton-authenticator-web"
version = "0.13.3"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    {file="package.json", search="  \"version\":.*", replace="  \"version\": \"{{version}}\","}
]

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
proton-authenticator = { path = "../proton-authenticator" }

js-sys = "0.3.77"
serde = { version = "1.0", features = ["derive"] }
tsify-next = { version = "0.5.5", features = ["wasm-bindgen", "js", "json"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
