[package]
name = "proton-authenticator-web"
version = "0.20.0"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    {file="package.json", search="  \"version\":.*", replace="  \"version\": \"{{version}}\","}
]

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
proton-authenticator = { path = "../proton-authenticator" }

js-sys.workspace = true
serde.workspace = true
tsify-next.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
