[package]
name = "proton-authenticator-web"
version = "0.25.4"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    {file="package.json", search="  \"version\":.*", replace="  \"version\": \"{{version}}\","}
]

# Needed since rust 1.87+
# https://github.com/rustwasm/wasm-pack/issues/1501
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
proton-authenticator = { path = "../proton-authenticator" }

js-sys.workspace = true
serde.workspace = true
tsify.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
