[package]
name = "proton-authenticator"
version = "0.17.1"
edition = "2021"

[lib]
doctest = false

[dependencies]
proton-pass-derive = { path = "../proton-pass-derive" }
proton-pass-totp = { path = "../proton-pass-totp" }

serde.workspace = true
serde_json.workspace = true

aes-gcm = "0.10.3"
base32 = "0.5.1"
base64 = "0.22.0"
csv = "1.3.1"
hex = "0.4.3"
hmac-sha1 = "0.2.2"
hmac = "0.12"
pbkdf2 = "0.12.2"
protobuf = "3.7.1"
rand = "0.8"
scrypt = "0.11.0"
sha2 = "0.10"
url = "2.5.4"
include_dir = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

uuid = { version = "1.15.1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true

getrandom = { version = "0.2.15", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
uuid = { version = "1.15.1", features = ["v4", "js"] }

[build-dependencies]
protobuf-codegen = "3.7.1"
protoc-bin-vendored = "3.1.0"

