[package]
name = "proton-authenticator"
version = "0.28.0"
edition = "2021"

[lib]
doctest = false

[features]
default = ["qr"]
qr = ["dep:image", "dep:rxing"]

[dependencies]
proton-pass-derive = { path = "../proton-pass-derive" }
proton-pass-totp = { path = "../proton-pass-totp" }

serde.workspace = true
serde_json.workspace = true

aes-gcm = "0.10.3"
argon2 = "0.5.3"
chacha20 = "0.9"
base32 = "0.5.1"
base64 = "0.22.0"
csv = "1.3.1"
hex = "0.4.3"
image = { version = "0.25.0", default-features = false, features = ["webp", "gif", "jpeg", "png", "bmp"], optional = true }
hmac-sha1 = "0.2.2"
hmac = "0.12"
pbkdf2 = "0.12.2"
poly1305 = "0.8"
protobuf = "3.7.1"
rand = "0.8"
rxing = { version = "0.8.0", features = ["default", "wasm_support"], optional = true }
scrypt = "0.11.0"
sha2 = "0.10"
url = "2.5.4"
zip = { version ="4.6.1", default-features = false, features = [ "deflate" ] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

uuid = { version = "1.15.1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true

getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
uuid = { version = "1.15.1", features = ["v4", "js"] }

[build-dependencies]
protobuf-codegen = "3.7.1"
protoc-bin-vendored = "3.1.0"

