[package]
name = "proton-pass-common"
version = "1.0.0"
edition = "2021"

[lib]
doctest = false

[features]
default = []
uniffi = ["dep:uniffi", "proton-pass-totp/uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen", "proton-pass-totp/wasm"]

[dependencies]
uniffi = { version = "0.31.0", optional = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
proton-pass-derive = { path = "../proton-pass-derive" }
proton-pass-totp = { path = "../proton-pass-totp" }

serde.workspace = true
serde_json.workspace = true

async-trait = "0.1.87"
coset = "0.4.0"
email_address = "0.2.9"
file-format = { version = "0.28.0", features = ["reader"] }
lazy_static = "1.5.0"
luhn = "1.0.1"
passkey = "0.5.0"
passkey-authenticator = "0.5.0"
passkey-types = { version = "0.5.0", features = ["serialize_bytes_as_base64_string"] }
public-suffix = "0.1.3"
rand = "0.9.0"
regex-lite = "0.1.6"
rmp-serde = "1.3.0"
ssh-key = { version = "0.6", features = ["std", "crypto", "ed25519", "rsa", "encryption", "alloc"] }
url = "2.5.4"
qrcode = "0.14.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
criterion.workspace = true
tokio.workspace = true

[[bench]]
name = "card_detector"
harness = false

[[bench]]
name = "password_scorer"
harness = false
