[package]
name = "proton-pass-mobile"
version = "0.15.0"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    # Yes, we are relying on the number of whitespaces
    {file="android/lib/build.gradle.kts", search="    version = .*", replace="    version = \"{{version}}\""}
]


[lib]
doctest = false
crate-type = ["cdylib", "staticlib"]
name = "proton_pass_common_mobile"

[dependencies]
proton-pass-common = { path = "../proton-pass-common" }
proton-pass-derive = { path = "../proton-pass-derive" }

clap_derive = { version = "4.0.0-rc.1" } # Needed for now to fix mobile binding generation
tokio = { version = "1.43", features = ["full"] }
uniffi = { version = "0.29.0" }

[build-dependencies]
uniffi = { version = "0.29.0", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "./bindgen.rs"
required-features = [ "uniffi/cli" ]
