[package]
name = "proton-pass-mobile"
version = "0.28.8"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    # Yes, we are relying on the number of whitespaces
    {file="android/lib/build.gradle.kts", search="    version = .*", replace="    version = \"{{version}}\""}
]


[lib]
doctest = false
crate-type = ["cdylib", "staticlib"]
name = "proton_pass_common_mobile"

[dependencies]
proton-pass-common = { path = "../proton-pass-common" }
proton-pass-derive = { path = "../proton-pass-derive" }

tokio.workspace = true

uniffi = { version = "0.31" }

[[bin]]
name = "uniffi-bindgen"
path = "./bindgen.rs"
required-features = [ "uniffi/cli" ]
