[package]
name = "proton-pass-totp"
version = "0.25.5"
edition = "2021"

[lib]
doctest = false

[dependencies]
proton-pass-derive = { path = "../proton-pass-derive" }

serde.workspace = true

serde-querystring = "0.3.0"
totp-rs = "5.6.0"
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "totp_generation"
harness = false
