[package]
name = "proton-pass-totp"
version = "0.28.8"
edition = "2021"

[lib]
doctest = false

[features]
uniffi = ["dep:uniffi"]
wasm = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
uniffi = { version = "0.31", optional = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
proton-pass-derive = { path = "../proton-pass-derive" }

serde.workspace = true

serde-querystring = "0.3.0"
totp-rs = "5.6.0"
url = "2.5.4"
urlencoding = "2.1.3"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "totp_generation"
harness = false
