[package]
name = "proton-pass-web"
version = "0.8.3"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    {file="package.json", search="  \"version\":.*", replace="  \"version\": \"{{version}}\","}
]

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
proton-pass-common = { path = "../proton-pass-common" }

js-sys = "0.3.67"
serde = { version = "1.0", features = ["derive"] }
tsify-next = { version = "0.5.2", features = ["wasm-bindgen", "js", "json"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[features]
web_password = []
web_ui = []
web_worker = ["web_password"]
