[package]
name = "proton-pass-web"
version = "0.15.0"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    {file="package.json", search="  \"version\":.*", replace="  \"version\": \"{{version}}\","}
]

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
proton-pass-common = { path = "../proton-pass-common" }

js-sys.workspace = true
serde.workspace = true
tsify-next.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[features]
web_password = []
web_ui = []
web_worker = ["web_password"]
