[workspace]

[package]
name = "icon_fetcher"
version = "0.2.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"

# HTTP client
reqwest = { version = "0.12.15", features = ["json", "stream", "rustls-tls"] }

# Futures
futures = "0.3.31"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

# Progress bar
indicatif = "0.17.11"
