[package]
name = "icon_fetcher"
version = "0.25.6"
edition = "2021"

[dependencies]

# Async runtime
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"

# HTTP client
reqwest = { version = "0.12.15", features = ["json", "stream", "rustls-tls", "blocking"] }

# Futures
futures = "0.3.31"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"

# Progress bar
indicatif = "0.17.11"
once_cell = "1.21.1"
regex = "1.11.1"

